<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SM</string>
    <string name="launcher_name">SM</string>
    <string name="title_patient">Patient</string>
    <string name="title_checkin">Checkin</string>
    <string name="title_alarm">Alarm</string>
    <string name="titel_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_create">Create</string>
    <string name="action_delete">Delete</string>
    <string name="action_refresh">Refresh</string>
    <string name="titel_checkin_list">Checkin List</string>
    <string name="action_take_picture">Take Photo</string>
    <string name="action_remove_photo">Remove Photo</string>
    <string name="action_medication_list">Medication</string>
    <string name="title_medication">Medication</string>
    <string name="radio_text_1">Answer 1</string>
    <string name="radio_radio_2">Answer 2</string>
    <string name="radio_text_3">Answer 3</string>
    <string name="action_save">Save</string>
    <string name="action_logout">Logout</string>
    <string name="action_login">Login</string>
    <string name="action_update">Update</string>
    <string name="action_cancel">Cancel</string>
    <string name="health_status_ticker">Symptom Management - Health Status</string>
    <string name="health_status">Please verify health status.</string>
    <string name="search">Search</string>
    <string name="action_overflow">Overflow</string>
    <string name="checkin_answer_text">Small Text</string>
    <string name="checkin_answer_date">intake date</string>
    <string name="checkin_three_answer_question_text">Question first line\nsecond line</string>
    <string name="checkin_two_answer_question_text">Question first line\nsecond line</string>
    <string name="checkin_answer_two_question_text">intake date</string>
    <string name="alarm_1_text">Alarm 1</string>
    <string name="alarm_2_text">Alarm 2</string>
    <string name="alarm_3_text">Alarm 3</string>
    <string name="alarm_4_text">Alarm 4</string>
    <string name="alarm_info_text">Alarms will be canceled by a system restart.</string>
    <string name="settings_user_name_text">Username</string>
    <string name="settings_password_text">Password</string>
    <string name="settings_cloud_url_text">Cloud-URL</string>
    <string name="medication_element_input_name">Name</string>
    <string name="medication_input_description">Description</string>
    <string name="medication_list_element_medication_name">Medication Name</string>
    <string name="medication_list_element_description">desciption</string>
    <string name="name_list_header_name">Name</string>
    <string name="patient_list_entry_patient_name">Medium Text</string>
    <string name="patient_list_entry_medical_record_number">Medium Text</string>
    <string name="symptom_checkin_list_pain_stomps_from_eating">painStopsFromEating</string>
    <string name="symptom_checkin_list_medication_intake">medicationIntake</string>
    <string name="symptom_checkin_list_pain">pain</string>
    <string name="symptom_checkin_list_checkin_date">checkin date</string>
    <string name="checkin_image_content_description">Photo of symptom</string>
    <string name="symptom_checkin_list_icon_content_description">List Icon</string>
    <string name="checkin_answer_question_text">Question first line\nsecond line</string>
    <string name="patient_list_entry_icon_content_description">List Icon</string>
    <string name="view_checkin_header_patient_name">name</string>
    <string name="view_checkin_header_checkin_date">checkinDate</string>


    <string-array name="user_names">
        <item>aflower</item>
        <item>btree</item>
        <item>cblack</item>
        <item>dblue</item>
        <item>jcarmine</item>
    </string-array>


    <string-array name="cloud_urls">
        <item>http://aba.home:8080</item>
        <item>https://aba.home:8443</item>
        <item>http://192.168.43.159:8443</item>
        <item>http://syma.cfapps.io</item>
        <item>http://syma-arku.rhcloud.com</item>
        <item>https://syma-arku.rhcloud.com</item>
    </string-array>


</resources>
