<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/ic_action_save"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_take_picture"
        android:title="@string/action_take_picture"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_remove_photo"
        android:title="@string/action_remove_photo"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/checkin_list"
        android:title="@string/titel_checkin_list"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <!--
    <item android:id="@+id/action_record_voice"
        android:title="@string/action_record_voice"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_remove_recording"
        android:title="@string/action_remove_recording"
        android:orderInCategory="100"
        android:showAsAction="never" />
    -->
</menu>
