<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/three_answer_question"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeightLarge"
    android:padding="6dip">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/checkin_three_answer_question_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <RadioGroup
        android:layout_below="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/question_radio_group">

        <RadioButton
            android:id="@+id/radio_answer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_text_1"/>
        <RadioButton
            android:id="@+id/radio_answer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_radio_2"/>
        <RadioButton
            android:id="@+id/radio_answer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_text_3"/>

    </RadioGroup>

</RelativeLayout>
