<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:padding="6dip" >

    <ImageView
        android:id="@+id/patientListImage"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="6dip"
        android:contentDescription="@string/patient_list_entry_icon_content_description"
        android:src="@drawable/pain_some" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/patient_list_entry_patient_name"
        android:id="@+id/patientListName"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/patientListImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/patient_list_entry_medical_record_number"
        android:id="@+id/patientListmedicalRecordNumber"
        android:layout_below="@+id/patientListName"
        android:layout_toEndOf="@+id/patientListImage" />

</RelativeLayout>
