<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.aku.sm.smclient.settings.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/settings_user_name_text"
        android:id="@+id/settingUserName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/settings_password_text"
        android:id="@+id/settingsPassword"
        android:layout_below="@+id/settingUserName"
        android:layout_alignEnd="@+id/settingUserName"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/settings_cloud_url_text"
        android:id="@+id/settingsCloudUrl"
        android:layout_below="@+id/settingsPassword"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editUsername"
        android:labelFor="@id/editUsername"
        android:layout_alignBottom="@+id/settingUserName"
        android:layout_toEndOf="@+id/settingUserName"
        android:layout_alignParentEnd="true"
        android:completionThreshold="1"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword"
        android:labelFor="@id/editPassword"
        android:layout_alignBottom="@+id/settingsPassword"
        android:layout_toEndOf="@+id/settingsPassword"
        android:layout_alignEnd="@+id/editUsername" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editCloudUrl"
        android:labelFor="@id/editCloudUrl"
        android:layout_alignBottom="@+id/settingsCloudUrl"
        android:layout_toEndOf="@+id/settingsCloudUrl"
        android:layout_alignEnd="@+id/editPassword"
        android:completionThreshold="1"/>

</RelativeLayout>
